--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:theme="@style/Theme.Team4Application"
         tools:targetApi="31">
         <activity
-            android:name=".VibrateMemuActivity"
-            android:exported="false" />
+            android:name=".VibrateMenuActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -27,11 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".VibrateMenuActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
-
     </application>
 
 </manifest>
